tests/expected_invalid_phase_expression_contracts.diag.out
<input>:11:8: error: phase declarations must define at least one position
    public phase EmptyPhase {
           ^^^^^^^^^^^^^^^^^^
<input>:20:5: error: a phase family name is not a value type; use a concrete position such as 'Phase::Position'
        AppConfig
        ^^^^^^^^^
<input>:24:5: error: unknown phase position 'Ready'
        AppConfig::Ready { id: 1 }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:28:5: error: phase position constructor 'test::AppConfig::Draft' may not have generic arguments
        AppConfig::Draft<Int> { id: 1 }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<input>:32:5: error: phase position 'test::AppConfig::Draft' must be constructed with named fields
        AppConfig::Draft
        ^^^^^^^^^^^^^^^^
